force-app/main/default/objects/DSD_Data_Skew_Result__c/DSD_Data_Skew_Result__c.object-meta.xml
<CustomObject>
    <description>Stores results of Data Skew Detector</description>
    <label>Data Skew Result</label>
    <nameField>
        <displayFormat>DSR-{0000}</displayFormat>
        <label>Data Skew Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Skew Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>