force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_Child_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>DSD_Child_Object_Name__c</fullName>
    <description>The API name of the object that has too many records that lookup to the parent object</description>
    <inlineHelpText>The API name of the object that has too many records that lookup to the parent object</inlineHelpText>
    <label>Skewed Child Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>