force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_Parent_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>DSD_Parent_Object_API_Name__c</fullName>
    <description>The API name of the object that has data skew due to too many records looking up to it</description>
    <inlineHelpText>The API name of the object that has data skew due to too many records looking up to it</inlineHelpText>
    <label>Parent Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>