force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_Skew_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>DSD_Skew_Record_Count__c</fullName>
    <description>The number of records found to that meet the data skew threshold</description>
    <inlineHelpText>The number of records found to that meet the data skew threshold</inlineHelpText>
    <label>Skew Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>