force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_Skew_Type__c.field-meta.xml
<CustomField>
    <fullName>DSD_Skew_Type__c</fullName>
    <description>Possible values: Account</description>
    <inlineHelpText>Possible values: Account</inlineHelpText>
    <label>Skew Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>