force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_Skewed_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>DSD_Skewed_Record_ID__c</fullName>
    <description>The record id of the record that has data skew</description>
    <inlineHelpText>The record id of the record that has data skew</inlineHelpText>
    <label>Skewed Record ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>