force-app/main/default/objects/DSD_Data_Skew_Result__c/fields/DSD_View_Record__c.field-meta.xml
<CustomField>
    <fullName>DSD_View_Record__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  DSD_Skewed_Record_ID__c, &quot;View Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Record</label>
    <type>Text</type>
</CustomField>